# dj_ninja_elastic

./: .env.example  .gitignore  Makefile  README.md  entrypoint.sh  manage.py  pyproject.toml  s.py
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py
core/api/v1/products/: handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/apps/common/: enums.py  exceptions.py  models.py
core/apps/customers/: entities.py  models.py
core/apps/customers/exceptions/: codes.py  customers.py
core/apps/customers/migrations/: 0001_initial.py  0002_alter_customer_token.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py  apps.py  containers.py
core/apps/products/entities/: reviews.py
core/apps/products/exceptions/: products.py  reviews.py
core/apps/products/migrations/: 0001_initial.py  0002_alter_product_options.py  0003_review.py
core/apps/products/models/: products.py  reviews.py
core/apps/products/services/: products.py  reviews.py
core/apps/use_cases/reviews/: create.py
core/project/: asgi.py  containers.py  urls.py
core/project/settings/: main.py
docker_compose/: monitoring.yaml  storages.yaml
project/project/: settings.py
tests/factories/: products.py
tests/services/: conftest.py  test_products.py
