[tool.poetry]
name = "dj-ninja-elastic"
version = "0.1.0"
description = ""
authors = ["arthur <ridpfrep@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.10"
environ = "^1.0"
django-ninja = "^1.3.0"
dependency-injector = "^4.44.0"

[tool.poetry.group.dev.dependencies]
faker = "^33.1.0"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.project.settings.local"
